# realtime-credit-card-fraud-detection

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ruleset.json
.github/workflows/: lint-test.yml  release.yml
app/: main.py  schema.py
app/utils/: data_processing.py  logging.py  logging_config.py  metrics.py  metrics_config.py  middleware.py  pre_prediction_checks.py  tracing_config.py
client/: Dockerfile  test_client.py
config/: config.alloy  loki-config.yml  tempo-config.yaml  tempo-config.yml
config/prometheus/: alert.rules.yml  prometheus.yml
deployments/: README.md
deployments/argo-apps/: values.yaml
deployments/argo-cd/: Chart.yaml  values.yaml
deployments/default/: Chart.yaml  values.yaml
deployments/docker/: Dockerfile  compose.yaml
deployments/docker-compose/: docker-compose.yaml
deployments/images/: mlops1-arch.excalidraw
deployments/model-serving/: Chart.yaml  values.yaml
deployments/terraform/: argocd.tf  main.tf  mise.toml  outputs.tf  terraform.tfvars  variables.tf
docs/: ccfd-background.md  ccfd-experiements-report.md  deployment.md
models/: model.pkl
notebooks/: 3-3-BaselineFeatureTransformation.ipynb  3-4-BaselineModeling.ipynb  5-2-ValidationStrategies.ipynb  5-3-ModelSelection.ipynb  6-2-CostSensitive.ipynb  BaselineFeatureTransformation.ipynb  Optimized_DecisionTrees.ipynb  README.md  SimulatedDataset.ipynb  compose.yml  house_price_prediction.ipynb  requirements.txt
notebooks/experiment/: 3-2-SimulatedDataset.ipynb  3-3-BaselineFeatureTransformation.ipynb  3-4-BaselineModeling.ipynb  README.md  (+8 more)
tests/: conftest.py  test_main.py
(+134 files in other folders)
