[project]
name = "realtime-credit-card-fraud-detection"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "asgiref==3.8.1",
    "click==8.1.8",
    "deprecated==1.2.18",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httptools==0.6.4",
    "httpx>=0.28.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "joblib==1.4.2",
    "numpy==1.24.4",
    "opentelemetry-api==1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-exporter-prometheus==0.54b1",
    "opentelemetry-instrumentation==0.54b1",
    "opentelemetry-instrumentation-asgi==0.54b1",
    "opentelemetry-instrumentation-fastapi==0.54b1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-semantic-conventions==0.54b1",
    "opentelemetry-util-http==0.54b1",
    "packaging==25.0",
    "pandas==2.0.3",
    "prometheus-client==0.21.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests>=2.32.4",
    "scikit-learn==1.0",
    "scipy==1.10.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.44.0",
    "structlog==25.4.0",
    "threadpoolctl==3.5.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uvicorn[standard]==0.33.0",
    "uvloop==0.21.0",
    "watchfiles==0.24.0",
    "websockets==13.1",
    "wrapt==1.17.2",
    "zipp==3.20.2",
]
